--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
     "openai": "^6.8.1",
+    "postgres": "^3.4.7",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
-  
 }
