--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "openai": "^6.8.1",
     "postgres": "^3.4.7",
     "telegraf": "^4.16.3"
