--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-cron": "^4.2.1",
     "openai": "^6.8.1",
     "postgres": "^3.4.7",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "telegramify-markdown": "^1.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
