--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/api/webhook",
       "destination": "/api/webhook.js"
+    },
+    {
+      "source": "/api/cron",
+      "destination": "/api/webhook.js"
     }
   ],
   "crons": [
